public-testnet/processor/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: redis
    command: ["sh", "-c", "tail -f /dev/null"]
    resources:
      limits:
        memory: "8000Mi"
        cpu: "1500m"
      requests:
        memory: "4000Mi"
        cpu: "1500m"
