public-testnet/processor/indexer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: indexer
  name: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: indexer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: indexer
    spec:
      containers:
        - args:
            - sh
            - -c
            - yarn db:bootstrap && yarn start:prod
          image: subsquid/hydra-indexer:4
          name: indexer
          resources: {}
          volumeMounts:
            - mountPath: /tmp
              name: persistent-storage
      restartPolicy: Always
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv
status: {}
