public-testnet/processor/indexer-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: indexer-gateway
  name: indexer-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: indexer-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: indexer-gateway
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: 192.168.171.191
            - name: DB_NAME
              value: indexer
            - name: DB_PASS
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
            - name: DEV_MODE
              value: "true"
            - name: HYDRA_INDEXER_STATUS_SERVICE
              value: indexer-status-service-svc.hydra-ui-test.svc.cluster.local:8081/status
          image: subsquid/hydra-indexer-gateway:4
          name: indexer-gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
