public-testnet/processor/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:6.0-alpine
          name: redis
          ports:
          - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
