public-testnet/processor/basilsik-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: basilisk-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: basilisk-api 
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basilisk-api 
    spec:
      containers:
      - image: postgres:12
        name: postgres 
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data 
            name: basilisk-api-vol
            subPath: pg 

      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk-api:latest
        name: processor
        command: [ "/bin/sh", "-c" ]
        args: ["npm run processor:migrate && npm run processor:db:create-migration initial && npm run processor:db:migrate && yarn run processor:start"]
        volumeMounts:
          - name: basilisk-api-vol
            mountPath: /mnt/data/
            subPath: processor
      
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/basilisk-api:latest
        name: query-node 
        command: [ "/bin/sh", "-c" ]
        args: ["yarn run processor:query-node:start"]
        ports:
          - containerPort: 4000
        volumeMounts:
          - name: basilisk-api-vol
            mountPath: /mnt/data/
            subPath: query-node 

      volumes:
        - name: basilisk-api-vol 
          persistentVolumeClaim:
            claimName: basiliskapivol
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: processor-query-service
spec:
  ports:
    - name: query-node
      port: 4000 
      targetPort: 4000
      protocol: TCP
  selector:
    app.kubernetes.io/name: basilisk-api
  type: NodePort
---
