public-testnet/processor/indexer-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: indexer-gateway
  name: indexer-gateway
spec:
  ports:
    - name: "4010"
      port: 4010
      targetPort: 8080
  selector:
    io.kompose.service: indexer-gateway
status:
  loadBalancer: {}
