public-testnet/processor/indexer-status.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: indexer-status-service
  name: indexer-status-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: indexer-status-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: indexer-status-service
    spec:
      containers:
        - env:
            - name: PORT
              value: "8081"
            - name: REDIS_URI
              value: 192.168.140.91:6379/0:6379/0
          image: subsquid/hydra-indexer-status-service:4
          name: indexer-status-service
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: indexer-status-service-svc
spec:
  ports:
    - port: 8081
      name: status
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: indexer-status-service
