public-testnet/processor/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: postgres 
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      containers:
      - image: postgres:12
        name: postgres 
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data 
            name: postgres-vol
            subPath: processor-pg-data
      volumes:
        - name: postgres-vol 
          persistentVolumeClaim:
            claimName: postgresvol
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: postgres-service
spec:
  ports:
    - name: pg 
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgres
