public-testnet/processor/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: redis-service
spec:
  ports:
    - name: "redis-port"
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis  
status:
  loadBalancer: {}
